update swagger search-bills
